--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/pages/group-page/group-page.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/pages/group-page/group-page.component.html
@@ -1,1 +1,23 @@
-<p>group-page works!</p>
+<div class="min-h-screen bg-gray-100">
+  
+  <div class="container mx-auto px-6 py-8">
+    <div class="max-w-2xl mx-auto">
+      <div class="bg-white rounded-lg shadow-lg p-6 mb-6">
+        <div class="flex items-center justify-between">
+          <h2 class="text-xl font-bold text-gray-800">Invite Member</h2>
+          <button class="text-blue-500 hover:text-blue-600">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"></path>
+            </svg>
+          </button>
+        </div>
+      </div>
+      
+      <div class="bg-white rounded-lg shadow-lg p-6">
+        <h2 class="text-xl font-bold text-gray-800 mb-6">Results:</h2>
+        <app-vote-summary 
+        [resultRecipes]="resultRecipes"></app-vote-summary>
+      </div>
+    </div>
+  </div>
+</div>
