--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/recipe-card/recipe-card.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/recipe-card/recipe-card.component.html
@@ -1,1 +1,17 @@
-<p>recipe-card works!</p>
+<div class="bg-white rounded-lg shadow-lg overflow-hidden">
+    <div class="relative">
+      <img 
+        [src]="recipe.imageUrl" 
+        [alt]="recipe.title"
+        class="w-full h-64 object-cover"
+      >
+      <div class="absolute top-4 right-4 bg-black bg-opacity-50 text-white px-2 py-1 rounded text-sm">
+        Preparation-time (Min)
+      </div>
+    </div>
+    
+    <div class="p-6">
+      <h3 class="text-xl font-bold text-gray-800 mb-2">{{ recipe.title }}</h3>
+      <p class="text-gray-600 text-sm">{{ recipe.description }}</p>
+    </div>
+  </div>
