--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/recipe-card/recipe-card.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/recipe-card/recipe-card.component.html
@@ -1,9 +1,9 @@
 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
     <div class="relative">
       <img 
-        [src]="recipe.imageUrl" 
+        [src]="recipe.image_url" 
         [alt]="recipe.title"
-        class="w-full h-64 object-cover"
+        class="w-auto h-100 object-cover"
       >
       <div class="absolute top-4 right-4 bg-black bg-opacity-50 text-white px-2 py-1 rounded text-sm">
         Preparation-time (Min)
