--Fixed "User already Voted bug"

--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/pages/home-page/home-page.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/pages/home-page/home-page.component.html
@@ -10,4 +10,6 @@
   </div>
 
   <app-group-list [groups]="groups"></app-group-list>
+
+  <app-browse-recipe-list [recipes]="recipes"></app-browse-recipe-list>
 </div>
