--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/browse-recipe-list/browse-recipe-list.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/browse-recipe-list/browse-recipe-list.component.html
@@ -10,7 +10,7 @@
     (click)="showMoreRecipes()"
     class="w-full bg-gray-500 hover:bg-gray-600 text-white font-semibold py-2 px-6 rounded-lg transition-colors"
   >
-    Mehr Rezepte anzeigen
+    Show More Recipes
   </button>
   }
 </div>
