--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/features/voting/vote-summary/vote-summary.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/features/voting/vote-summary/vote-summary.component.html
@@ -5,7 +5,7 @@
   </p>
 
   <div class="space-y-4">
-    @for (recipe of resultRecipes; track recipe.id; let i = $index) { @if (i <
+    @for (recipe of resultRecipes; track recipe.title; let i = $index) { @if (i <
     numberOfShowedRecipes) {
     <div
       class="bg-gray-50 border border-gray-200 rounded-lg p-4 w-full hover:bg-gray-100 transition-colors"
