--Added vercel.json

--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/recipe-card-small/recipe-card-small.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/recipe-card-small/recipe-card-small.component.html
@@ -9,7 +9,7 @@
     </div>
     <button
       (click)="viewRecipe()"
-      class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-lg transition-colors"
+      class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-lg transition-colors m-3"
     >
       Details
     </button>
