--Added recipes-full --Before Docker config

--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/features/group/create-group/create-group.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/features/group/create-group/create-group.component.html
@@ -10,6 +10,6 @@
       [disabled]="!groupName"
       class="w-full bg-blue-600 hover:bg-blue-700 disabled:bg-gray-300 disabled:cursor-not-allowed text-white font-semibold py-3 px-6 rounded-lg transition-colors"
     >
-      Gruppe erstellen
+      Create Group
     </button>
 </div>
