--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/features/user/user-profile/user-profile.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/features/user/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
-<div class="bg-gray-100 mb-6">  
+<div class="bg-gray-100 mb-6 min-h-screen">  
     <div class="container mx-auto px-6 py-8">
-      <div class="max-w-md mx-auto bg-white rounded-lg shadow-lg p-8">
+      <div class="max-w-2xl mx-auto bg-white rounded-lg shadow-lg p-8">
         @if (user) {
           <div class="text-center">
             <div class="w-24 h-24 bg-gray-600 rounded-full flex items-center justify-center mx-auto mb-4">
