--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/pages/home-page/home-page.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<div class="max-w mx-auto space-y-6 mb-6">
+<div class="max-w mx-auto space-y-6 mb-6 min-h-screen">
   <div class="bg-white rounded-lg shadow-lg p-6 mb-6">
     <h2 class="text-2xl font-bold text-gray-800 mb-2">
       Welcome{{ currentUser ? ", " + currentUser.username : "" }}!
