--working docker-compose

--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/shared/components/header/header.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/shared/components/header/header.component.html
@@ -7,7 +7,7 @@
         </svg>
       </button>
 
-      <a href="/recipeswiper/home"
+      <a (click)="navigateToHome()"
       class="hidden sm:flex font-semibold text-lg text-white hover:text-blue-200 items-center transition-colors ml-4">Home</a>
 
       <div *ngIf="showMenu" class="absolute left-0 top-full w-48 bg-white text-gray-800 rounded shadow-lg z-50">
