--- a/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/browse-recipe-list/browse-recipe-list.component.html
+++ b/recipeswiper-frontend/recipeswiper-frontend/src/app/features/recipe/browse-recipe-list/browse-recipe-list.component.html
@@ -1,7 +1,9 @@
 <div class="bg-white rounded-lg shadow-lg p-6 mb-6">
   <h2 class="text-2xl font-bold text-gray-800 mb-2">Browse Recipes</h2>
   <p class="text-gray-600 mb-6">Here you can find all available recipes.</p>
-
+  <button (click)="navigateToNewRecipe()" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-lg transition-colors mb-4">
+    Add your own recipe
+  </button>
   @for (recipe of recipes; track recipe.recipeId; let i = $index) { @if (i <
   numberOfShowedRecipes) {
   <app-recipe-card-small [recipe]="recipe"></app-recipe-card-small>
